--- a/TODO.txt
+++ b/TODO.txt
@@ -2,8 +2,8 @@
 - Crud Operation for contest (Implement 3 Buttons [Update, Delete]). (2) Sondos
 - Search in explore group. (2) Done (done).
 - Group Details. (3) Yousof (Done ✅).
-- Submit in contest. (4) Abdo
-- Status & Rank in contest (Check if it work, based on previous task 6). (4) Abdo
+- Submit in contest. (4) Abdo (Done ✅).
+- Status & Rank in contest (Check if it work, based on previous task 6). (4) Abdo (Done ✅).
 - Join and Leave group. (5) Esraa
 - Invite user to group (leader) && Accept and decline this invitation by user. (5) Esraa
 -------------------------------------------------------------------------------------
