--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,6 @@
 - Forms Validations. (1) Sondos
 - Crud Operation for contest (Implement 2 Buttons [Update, Delete]). (2) Sondos (Done ✅).
-- Search in explore group. (2) Done (Done ✅).
+- Search in explore group. (2) (Done ✅).
 - Group Details. (3) Yousof (Done ✅).
 - Submit in contest. (4) Abdo (Done ✅).
 - Status & Rank in contest (Check if it work, based on previous task 6). (4) Abdo (Done ✅).
