--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,4 @@
-- Forms Validations. (1) Sondos
+- Forms Validations. (1) Sondos(Done ✅).
 - Crud Operation for contest (Implement 2 Buttons [Update, Delete]). (2) Sondos (Done ✅).
 - Search in explore group. (2) (Done ✅).
 - Group Details. (3) Yousof (Done ✅).
